concord_macros/tests/dsl/fail/fail_secret_expose_in_query.stderr
error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/dsl/fail/fail_secret_expose_in_query.rs:13:25
   |
13 |         "leak" = secret.token.expose().to_string()
   |                         ^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_expose_in_query.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
